verfiy/new password/effects

--- a/Rolpar.html
+++ b/Rolpar.html
@@ -130,6 +130,11 @@
       <img class="cerc3" src="show.png" alt="cerc">
       <img class="cerc4" src="show.png" alt="cerc">
 
+      <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+ <script src="firebase-config.js"></script>
+ <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
