--- a/exerciti.html
+++ b/exerciti.html
@@ -25,12 +25,12 @@
   <div class="carousel-container">      
         <section id="schelet" >
             <div class="carousel" id="carousel">
-                <a href="test1s.html"><img src="t1bu.png" class="slide active"></a>
-                <a href="test2s.html"><img src="t2b.png" class="slide" ></a>
-                <a href="test3s.html"><img src="t3b.png" class="slide" ></a>
-                <a href="test4s.html"><img src="t4b.png" class="slide" ></a>
-                <a href="test5s.html"><img src="t5b.png" class="slide" ></a>
-                <a href="test6s.html"><img src="t6b.png" class="slide" ></a>
+                <a href="test1s.html" id="test1s"><img src="t1bu.png" class="slide active"></a>
+                <a href="test2s.html" id="test2s"><img src="t2b.png" class="slide" ></a>
+                <a href="test3s.html" id="test3s"><img src="t3b.png" class="slide" ></a>
+                <a href="test4s.html" id="test4s"><img src="t4b.png" class="slide" ></a>
+                <a href="test5s.html" id="test5s"><img src="t5b.png" class="slide" ></a>
+                <a href="test6s.html" id="test6s"><img src="t6b.png" class="slide" ></a>
             </div>
               <div class="dots">
                 <span class="dot active" onclick="setSlide(0)"></span>
@@ -50,12 +50,12 @@
      <div class="carousel-container">
      <section id="muschi">
             <div class="carousel1" id="carousel1">
-                <a href="test1m.html"><img src="m1.png" class="slide active"></a>
-                <a href="test2m.html"><img src="m2.png" class="slide"></a>
-                <a href="test3m.html"><img src="m3.png" class="slide"></a>
-                <a href="test4m.html"><img src="m4.png" class="slide"></a>
-                <a href="test5m.html"><img src="m5.png" class="slide"></a>
-                <a href="test6m.html"><img src="m6.png" class="slide"></a>
+                <a href="test1m.html" id="test1m"><img src="m1.png" class="slide active"></a>
+                <a href="test2m.html" id="test2m"><img src="m2.png" class="slide"></a>
+                <a href="test3m.html" id="test3m" ><img src="m3.png" class="slide"></a>
+                <a href="test4m.html" id="test4m"><img src="m4.png" class="slide"></a>
+                <a href="test5m.html" id="test5m" ><img src="m5.png" class="slide"></a>
+                <a href="test6m.html" id="test6m"><img src="m6.png" class="slide"></a>
             </div>
             <div class="dots1">
                 <span class="dot1 active" onclick="setSlide(0)"></span>
@@ -76,7 +76,11 @@
     </section>
     </div>
 
-    
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="testefire.js"></script>
     <script src="scripthub.js"></script>
     <script src="scrollmain.js"></script>
 </body>
