--- a/fiziologie.html
+++ b/fiziologie.html
@@ -21,8 +21,7 @@
         <div class="capitol">
             <button class="capitol-btn">Clasificarea muschilor</button>
             <div class="lectii">
-                <a href="#">Clasificarea muschilor dupa forma</a>
-              
+                <a href="fiziologie.html">Clasificarea muschilor dupa forma</a>
             </div>
         </div>
     
@@ -49,7 +48,7 @@
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
                 <a href="propietati.html">propietati</a>
-                <a href="#">manifestarile contractiei musculare</a>
+                <a href="Manifestarile.html">manifestarile contractiei musculare</a>
               </div>
           </div>
 
@@ -99,7 +98,11 @@
 </div>
 
 
-
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+<script src="firebase-config.js"></script>
+<script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
