--- a/memsup.html
+++ b/memsup.html
@@ -97,6 +97,12 @@
 <p class="p4">Scheletul antebrațului este alcătuit din două oase lungi: radiusul și ulna.</p>
 <p class="p5">Scheletul mâinii este format din 8 oase carpiene, 5 metacarpiene și 14 falange (pentru degetul I — police — există numai două falange).</p>
 <img class="mana" src="schelmaini.png" alt="lis">
-     <script src="scriptsidebar.js"></script>
+   
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+ <script src="firebase-config.js"></script>
+ <script src="lectii.js"></script>
+<script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
