--- a/mustrun.html
+++ b/mustrun.html
@@ -126,6 +126,11 @@
 </div>
 <img class="tr8" src="pect56.png">
 
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+<script src="firebase-config.js"></script>
+<script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
    </body>
