--- a/schelet.html
+++ b/schelet.html
@@ -64,7 +64,6 @@
             <button class="capitol-btn">6.Notiuni de patologie</button>
            <div class="lectii">
             <a href="patologie.html">Noțiuni elementare de igienă și patologie</a>
-                <a href="#">kazane ce pun aici1:(</a>
               </div>
           </div>
 
@@ -84,8 +83,11 @@
 
 
 
-
-
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
