--- a/scheletcap.html
+++ b/scheletcap.html
@@ -78,8 +78,6 @@
 
 
 
-     <script src="scriptsidebar.js"></script>
-    <script src="script.js"></script>
     <img class="capsus" src="cap.png">
 
     <p class="p1">Este alcătuit din neurocraniu, care adăpostește encefalul, și din viscerocraniu, unde se află atât segmentele periferice ale organelor de simț, cât și primele segmente ale aparatelor respirator și digestiv.</p>
@@ -135,5 +133,13 @@
    --parietale;
     </p>
  <img class="capdet" src="capdet.jpg">
+
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+ <script src="firebase-config.js"></script>
+ <script src="lectii.js"></script>
+     <script src="scriptsidebar.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
