--- a/scheletele triunchiul.html
+++ b/scheletele triunchiul.html
@@ -33,7 +33,11 @@
 <img class="asaseapoza" src="provine.png" alt="asaseapoza">
 <img class="asapteapoza" src="fuz.png" alt="asapteapoza">
 <img class="aoptapoza" src="torosos.png" alt="aoptapoza">
-
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+ <script src="firebase-config.js"></script>
+ <script src="lectii.js"></script>
 <script src="scripthub.js"></script>
 </body>
 </html> 
