--- a/articulati.html
+++ b/articulati.html
@@ -128,6 +128,12 @@
 </div>
 <img class="articulatii5" src="genunchi.png">
 <div class="cutietitlu"></div>
+
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+<script src="firebase-config.js"></script>
+<script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
