--- a/muschi membri inferior.html
+++ b/muschi membri inferior.html
@@ -118,7 +118,11 @@
           <p style="font-size: 2.4rem; font: 500; padding-left: 370px;">a. Fața dorsală</br>b. Fața plantară</p>
         </section>
 
-
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+        <script src="firebase-config.js"></script>
+        <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
