--- a/patologiemuschi.html
+++ b/patologiemuschi.html
@@ -78,7 +78,11 @@ cea ce are ca efect, în continuare, diminuarea contractiei musculare.
 
 
 
-
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
    </body>
