--- a/schelettrunchi.html
+++ b/schelettrunchi.html
@@ -207,6 +207,11 @@
                         <div class="cutiepz10">
                             <img class="poza10" src="coaste_4.png" alt="poza10">
                     </div>
+                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+                    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+                    <script src="firebase-config.js"></script>
+                    <script src="lectii.js"></script>
     <script src="scriptsidebar.js"></script>
     <script src="script.js"></script>
 </body>
