--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
             <input class="email" type="email" id="email" placeholder="Email" required>
             <input class="password" type="password" id="password" placeholder="Password" required>
 
-            <a href="verification.html"><button class="login" type="submit">Sign Up</button></a>
+            <a href="verification.html" style="text-decoration: none;"><button class="login" type="submit">Sign Up</button></a>
 
         </form>
 
