--- a/tipschelet.html
+++ b/tipschelet.html
@@ -154,7 +154,11 @@
 
 
 
-
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+        <script src="firebase-config.js"></script>
+        <script src="lectii.js"></script>
 <script src="scriptsidebar.js"></script>
 <script src="scripthub.js"></script>
 </body>
