--- a/uitatparola.html
+++ b/uitatparola.html
@@ -30,6 +30,11 @@
             <div class="info">
         <a href="homepage.html"><h2>←Inapoi la hompage</h2></a>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="uitatparola.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
