--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
       <div class="banner fade-in">
           <h1>Bun Venit la Bioline</h1>
       </div>
-      <h2 class="fade-in">Învață anatomia și fiziologia aparatului locomotor </br> Elev:Colici-Mare Andrei </br>Professor:Atia-Mihaela Fodor</h2>
+      <h2 class="fade-in">Învață anatomia și fiziologia aparatului locomotor </br> Elevii:Colici-Mare Andrei si Florescu Alexandru </br>Profesor:Atia-Mihaela Fodor</h2>
       <div class="line fade-in"></div>
   </section>
 
@@ -118,7 +118,8 @@
   <script src="firebase-config.js"></script>
       <script src="Auth.js"></script>
       <script src="script.js"></script>
-      <script src="chatbot.js"></script>  
+      <script src="chatbot.js"></script>
+      <script src="header.js"></script>  
      <script>
       document.addEventListener('DOMContentLoaded', () => {
     const signupButtonDiv = document.querySelector('.signup-btn').parentElement; // Parent of the Sign Up button
