--- a/meniu.html
+++ b/meniu.html
@@ -13,12 +13,12 @@
     <source src="muschi.mp4" type="video/mp4">
 </video>
         <ul class="menu-links">
-          <li><a href="schelet.html">Scheletul</a>
+          <li><a href="schelet.html">Sistem osos</a>
           <p class="link-description">
             Aflați despre sistemul osos
           </p>
         </li>
-          <li><a href="fiziologie.html">Muşchi</a>
+          <li><a href="fiziologie.html">Sistemul muscular</a>
             <p class="link-description">Aflați despre sistemul muscular</p>
           </li>
           <li><a href="3drep.html">Reprezentari 3D</a>
