--- a/Rolpar.html
+++ b/Rolpar.html
@@ -17,7 +17,7 @@
 </header>
 
 <div class="sidebar">
-    <h2>Lectiile Scheletul</h2>
+    <h2>Lectii sistem osos</h2>
 
     <div class="capitol">
         <button class="capitol-btn">1.Sistem Osos</button>
