--- a/mustrun.html
+++ b/mustrun.html
@@ -49,7 +49,7 @@
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
                 <a href="propietati.html">propietati</a>
-                <a href="#">manifestarile contractiei musculare</a>
+                <a href="Manifestarile.html">manifestarile contractiei musculare</a>
               </div>
           </div>
         
