--- a/patologie.html
+++ b/patologie.html
@@ -64,7 +64,7 @@
             <button class="capitol-btn">6.Notiuni de patologie</button>
            <div class="lectii">
                 <a href="patologie.html">Noțiuni elementare de igienă și patologie</a>
-                
+                pat
               </div>
           </div>
 
