--- a/patologiemuschi.html
+++ b/patologiemuschi.html
@@ -43,7 +43,7 @@
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
                 <a href="propietati.html">propietati</a>
-                <a href="#">manifestarile contractiei musculare</a>
+                <a href="Manifestarile.html">manifestarile contractiei musculare</a>
               </div>
           </div>     
         <div class="capitol">
