--- a/homepage.html
+++ b/homepage.html
@@ -104,7 +104,7 @@
                         <img src="CAPb.PNG" alt="cap" class="study-image"/>
                     </article>
                     <footer class="study-footer">
-                        <p class="action-text">invata→</p>
+                        <a href="cap.html" style="text-decoration: none; color: rgb(255, 250, 240);"><p class="action-text">invata→</p></a>
                     </footer>
                 </div>
 
@@ -115,7 +115,7 @@
                         <img src="gat1.PNG" alt="gat" class="study-image"/>
                     </article>
                     <footer class="study-footer">
-                        <p class="action-text">invata→</p>
+                        <a href="gat.html" style="text-decoration: none; color: rgb(255, 250, 240);"><p class="action-text">invata→</p></a>
                     </footer>
                 </div>
 
@@ -126,7 +126,7 @@
                         <img src="triunch.PNG" alt="triunc" class="study-image"/>
                     </article>
                     <footer class="study-footer">
-                        <p class="action-text">invata→</p>
+                        <a href="mustrun.html" style="text-decoration: none; color: rgb(255, 250, 240);"><p class="action-text">invata→</p></a>
                     </footer>
                 </div>
 
@@ -137,7 +137,7 @@
                         <img src="superiro.PNG" alt="supe" class="study-image"/>
                     </article>
                     <footer class="study-footer">
-                        <p class="action-text">invata→</p>
+                        <a href="mussup.html" style="text-decoration: none; color: rgb(255, 250, 240);"><p class="action-text">invata→</p></a>
                     </footer>
                 </div>
 
@@ -148,7 +148,7 @@
                         <img src="infer.PNG" alt="infe" class="study-image"/>
                     </article>
                     <footer class="study-footer">
-                        <p class="action-text">invata→</p>
+                        <a href="muschi membri inferior.html" style="text-decoration: none; color: rgb(255, 250, 240);"></a><p class="action-text">invata→</p>
                     </footer>
                 </div>
             </div>
@@ -161,9 +161,9 @@
 <section class="page4 fade-in">
     <h5>Pune intrebari si primeste raspuns de la altii utilizatori!</h5>
     
-    <button class="forum-button" onclick="window.location.href='/forum'">
+   <a href="forum.html"><button class="forum-button">
       Intra pe forum-ul Bioline
-    </button>
+    </button></a>
     
     <div class="floating-elements">
       <!-- DNA strands -->
