--- a/homepage.html
+++ b/homepage.html
@@ -189,7 +189,9 @@
   </section>
 
  
-
+<div class="chat-icon" id="chat-icon">
+    <img src="messengergood.png" alt="Chat" width="80" height="80">
+  </div>
   <div class="chat-container" id="chat-container">
     <div class="chat-header">
         <img src="docbot.png" alt="bot" width="50" height="50">
