--- a/forum.html
+++ b/forum.html
@@ -11,9 +11,9 @@
     <a href="homepage.html" class="logo">Bioline</a>
     <div class="nav-controls">
       <button class="create-post" id="mobileCreatePost">+</button>
-      <div class="profile-btn" id="profileBtn">
+      <a href="dashboard.html" style="text-decoration: none;"><div class="profile-btn" id="profileBtn">
         <!-- User avatar will be added dynamically -->
-      </div>
+      </div></a>
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -28,7 +28,7 @@
       <div id="topicsList">
         <!-- Topics will be loaded dynamically -->
       </div>
-      <button id="createTopicBtn" class="create-topic-btn" style="display: flex; align-items: center; gap: 8px; margin-top: 15px; padding: 8px 15px; background-color: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; width: 100%;">
+      <button id="createTopicBtn" class="create-topic-btn" style="display: flex; align-items: center; gap: 8px; margin-top: 15px; padding: 8px 15px; background-color: #20a3fa; color: white; border: none; border-radius: 4px; cursor: pointer; width: 100%;">
         <span style="font-size: 18px;">+</span> Creați un subiect nou
       </button>
     </div>
@@ -94,7 +94,6 @@
     </div>
   </div>
 
-  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
