--- a/homepage.html
+++ b/homepage.html
@@ -100,7 +100,7 @@
                 <!-- Card 1 -->
                 <div class="study-container">
                     <article class="study-content">
-                        <h3 class="study-title">Muschiul capului.</h3>
+                        <h3 class="study-title">Muschii capului.</h3>
                         <img src="CAPb.PNG" alt="cap" class="study-image"/>
                     </article>
                     <footer class="study-footer">
@@ -111,7 +111,7 @@
                 <!-- Card 2 -->
                 <div class="study-container">
                     <article class="study-content">
-                        <h3 class="study-title">Muschiul Gatului.</h3>
+                        <h3 class="study-title">Muschii gatului.</h3>
                         <img src="gat1.PNG" alt="gat" class="study-image"/>
                     </article>
                     <footer class="study-footer">
@@ -122,7 +122,7 @@
                 <!-- Card 3 -->
                 <div class="study-container">
                     <article class="study-content">
-                        <h3 class="study-title">Muschiul triunchiului.</h3>
+                        <h3 class="study-title">Muschii triunchiului.</h3>
                         <img src="triunch.PNG" alt="triunc" class="study-image"/>
                     </article>
                     <footer class="study-footer">
@@ -144,7 +144,7 @@
                 <!-- Card 5 -->
                 <div class="study-container">
                     <article class="study-content">
-                        <h3 class="study-title">Muschi inferiorii.</h3>
+                        <h3 class="study-title">Muschii inferiori.</h3>
                         <img src="infer.PNG" alt="infe" class="study-image"/>
                     </article>
                     <footer class="study-footer">
@@ -159,7 +159,7 @@
 
   
 <section class="page4 fade-in">
-    <h5>Pune intrebari si primeste raspuns de la altii utilizatori!</h5>
+    <h5>Pune intrebari si primeste raspuns de la alti utilizatori!</h5>
     
    <a href="forum.html"><button class="forum-button">
       Intra pe forum-ul Bioline
@@ -220,7 +220,7 @@
       <script src="script.js"></script>
       <script src="chatbot.js"></script>
       <script src="header.js"></script>
-      <script src="scroll.js"></script> 
+      <script src="scroll.js"></script>
      <script>
       document.addEventListener('DOMContentLoaded', () => {
     const signupButtonDiv = document.querySelector('.signup-btn').parentElement; // Parent of the Sign Up button
