--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
     </video>
     <div class="button-container">
         <a href="homepage.html">
-            <button class="enter-button">Incepeti carierea in medicina</button>
+            <button class="enter-button">Incepe-ti cariera in medicina</button>
         </a>
     </div>
     <div class="overlay" id="circles-overlay"></div>
