--- a/test3m.html
+++ b/test3m.html
@@ -20,7 +20,7 @@
     <a href="exerciti.html"><button id="backButton" class="back-btn">⬅ Înapoi</button></a>
     <video id="ske" class="ske"  src="muschiu.mp4" autoplay loop muted playsinline></video>
     <button id="videoToggle" class="video-btn">⏸ Pause</button>    
-
+    <div class="total" id="total">0/10</div>
     <div id="timer" class="timer">⏳ 10:00</div>
     </div>
 
@@ -151,7 +151,7 @@
       <p class="rasr" >C) Triceps sural</p>
       <p class="rasr" >D) Biceps femural</p>
       <button class="verifca">✔ Verifica</button>
-    </div>
+    </div><button class="termina" id="termin">Termina testul</button>
     </div>
   </div>
 
