--- a/career.html
+++ b/career.html
@@ -51,7 +51,7 @@
       </div>
           <div class="container">
             <div class="news-header">
-                <h2>Știri de Biologie</h2>
+                <h2>Noutati din Biologie</h2>
             </div>
     
             <div class="controls">
