--- a/test5s.html
+++ b/test5s.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=`, initial-scale=1.0">
     <title>bioline</title>
-    <link rel="stylesheet" href="test1s.css">
+    <link rel="stylesheet" href="test5s.css">
 </head>
 <body>
     <header class="header">
@@ -20,7 +20,7 @@
     <a href="exerciti.html"><button id="backButton" class="back-btn">⬅ Înapoi</button></a>
     <video id="ske" class="ske"  src="skele.mp4" autoplay loop muted playsinline></video>
     <button id="videoToggle" class="video-btn">⏸ Pause</button>    
-
+      <div class="total" id="total">0/10</div>
     <div id="timer" class="timer">⏳ 10:00</div>
     </div>
 
@@ -151,7 +151,7 @@
       <p class="rasr" >C) Artrodiile</p>
       <p class="rasr" >D) Sinostozeleh</p>
       <button class="verifca">✔ Verifica</button>
-    </div>
+    </div><button class="termina" id="termin">Termina testul</button>
     </div>
   </div>
 
